2007-05-27  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/start.xul: Make commands work on
	frame images.  These just show an alert for now.

2007-05-26  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/frame.js: Call windowStack.moveToTop on map.

	* compzilla/chrome/content/minimize.js: Use w.content.XProps.

	* compzilla/chrome/content/content.js: Add
	Atoms._NET_WM_ICON_GEOMETRY to XProps.

2007-05-25  Alex Graveley  <alex@beatniksoftware.com>

        Make resizing the X window via the frame work...

	* compzilla/src/compzillaWindow.cpp (WindowConfigured): Take an
	isNotify arg.  Only send the configure DOM event when not a
	notify, or if it's an override window.  Only reset the pixmap if
	it is a notify, and the sizes have changed.  Don't call
	UpdateAttributes, but just update mAttr directly, and only if it's
	a notify.

	* compzilla/src/compzillaControl.cpp (Filter): Pass false for
	isNotify to WindowConfigured for ConfigureRequest events.  Pass
	true for ConfigureRequest.

	* compzilla/chrome/content/frame.js: (configure handler): call
	frame.moveResizeToContent, instead of moveResize to attempt to
	move the frame to the correct location relative to the window.
	(frameDragMouseMoveListener): switch on operation without
	the "-resize" appended, this was dumb.	

	* compzilla/chrome/content/start.js: Ditto, but it's broken for
	the initial case for some reason, the frame still offsets the
	window.

2007-05-24  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/frame.js,
	compzilla/chrome/content/content.js: incomplete but functional
	first pass at moving all the nativeWindow stuff into content.js
	from frame.js.  the big holdouts left are
	_connectNativeWindowListeners and some initialization stuff in
	CompzillaFrame ().

	content objects now have the following methods they can implement:
	ondestroy, onmoveresize, onhide, onshow, onmaximize, onfullscreen.